--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,63 @@
 <resources>
     <string name="app_name">Unfit2.0</string>
+    <string name="email_required">Email is required</string>
+    <string name="invalid_email">Please enter a valid email address</string>
+    <string name="password_required">Password is required</string>
+    <string name="password_too_short">Password must be at least 6 characters</string>
+    <string name="name_required">Name is required</string>
+    <string name="confirm_password_required">Please confirm your password</string>
+    <string name="passwords_dont_match">Passwords don\'t match</string>
+
+    <!-- Post-related strings -->
+    <string name="post_created">Post created successfully</string>
+    <string name="post_updated">Post updated successfully</string>
+    <string name="create_post">Create Post</string>
+    <string name="edit_post">Edit Post</string>
+    <string name="post_content_required">Please add content or an image</string>
+    <string name="delete_post">Delete Post</string>
+    <string name="delete_post_confirmation">Are you sure you want to delete this post?</string>
+    <string name="delete">Delete</string>
+
+    <!-- User-related strings -->
+    <string name="login_required">Please log in to create a post</string>
+    <string name="login_required_like">Please log in to like posts</string>
+    <string name="username_required">Username is required</string>
+    <string name="profile_updated">Profile updated successfully</string>
+    <string name="profile_update_failed">Failed to update profile</string>
+    <string name="no_bio">No bio provided</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="logout">Logout</string>
+    <string name="logout_confirmation">Are you sure you want to logout?</string>
+    <string name="photo_selected">Photo selected</string>
+
+    <!-- Action feedback -->
+    <string name="like_failed">Failed to like post</string>
+    <string name="comment_failed">Failed to add comment</string>
+    <string name="delete_failed">Failed to delete post</string>
+    <string name="post_deleted">Post deleted successfully</string>
+
+    <!-- Dialog-related strings -->
+    <string name="discard_post">Discard post?</string>
+    <string name="discard_post_confirmation">Are you sure you want to discard this post?</string>
+    <string name="discard">Discard</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="share_post">Share Post</string>
+    <string name="select_location">Select Location</string>
+
+    <!-- Other UI strings -->
+    <string name="show_more">Show more</string>
+    <string name="show_less">Show less</string>
+    <string name="location_added">Location added</string>
+
+    <!-- Plurals for dynamic quantity text -->
+    <plurals name="likes_count">
+        <item quantity="one">%d like</item>
+        <item quantity="other">%d likes</item>
+    </plurals>
+
+    <plurals name="comments_count">
+        <item quantity="one">%d comment</item>
+        <item quantity="other">%d comments</item>
+    </plurals>
 </resources>
