--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="post_updated">Post updated successfully</string>
     <string name="create_post">Create Post</string>
     <string name="edit_post">Edit Post</string>
+    <string name="posts">Posts</string>
+    <string name="liked_posts">Liked Posts</string>
+    <string name="no_posts_yet">No posts yet</string>
+    <string name="no_liked_posts">No liked posts yet</string>
+    <string name="no_data">No data</string>
     <string name="post_content_required">Please add content or an image</string>
     <string name="delete_post">Delete Post</string>
     <string name="delete_post_confirmation">Are you sure you want to delete this post?</string>
