--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,9 @@
     <string name="send_comment">Send</string>
     <string name="no_comments_yet">No comments yet</string>
     <string name="like_icon">Like</string>
+    <string name="more_options">More options</string>
+    <string name="user_avatar">User Avatar</string>
+    <string name="post_image">Post Image</string>
 
     <!-- User-related strings -->
     <string name="login_required">Please log in to create a post</string>
@@ -99,7 +102,6 @@
 
     <!-- Create Post Fragment -->
     <string name="whats_on_your_mind">What\'s on your mind?</string>
-    <string name="post_image">Post Image</string>
     <string name="remove_image">Remove Image</string>
     <string name="add_to_your_post">Add to your post</string>
     <string name="add_image">Add Image</string>
